--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
-    "next": "13.5.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "react-icons": "^4.11.0",
     "sass": "^1.69.3"
   },
@@ -22,7 +22,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "^5"
