--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.446.0",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-icons": "^4.11.0",
     "sass": "^1.69.3"
   },
   "devDependencies": {
